Updated some documentation
git-svn-id: https://sdocml.googlecode.com/svn/trunk@49 a297bd5c-318b-11de-a996-7ff70a941223

--- a/conf/defaulttemplate.html
+++ b/conf/defaulttemplate.html
@@ -118,18 +118,18 @@
             <table id="top-level-content-table" height="100%" width="100%">
             <tr>
                 <td id="sidebar-cell">
-                    <div id="sidebar-area" height="100%">
+                    <div id="sidebar-area" height="100%" style="width : 400px;">
                         <table width="100%" stype="border-spacing:0px;">
                             <tr>
                                 <td class="sidebar-table-cell sidebar-head-cell"><a href="javascript:showSidebarContents()">Contents</a></td>
                                 <td class="sidebar-head-sep"/>
                                 <td class="sidebar-table-cell sidebar-head-cell"><a href="javascript:showSidebarIndex()">Index</a></td>
-                                <td width="100%"/>
+                                <td style="width:100%;">&nbsp;</td>
                             </tr>
                             <tr>
                                 <td colspan="4" class="sidebar-table-cell">
                                     <!--<div style="width:200px; display=none;">-->
-                                    <div style="width:200px;">
+                                    <div style="width:400px;">
                                         <div id="sidebar-contents"><sdoc:item key="sidebar:contents"></div>
                                         <div id="sidebar-index" style="display:none;"><sdoc:item key="sidebar:index"></div>
                                     </div>
@@ -198,9 +198,5 @@
         catch(err) 
         {}
     </script>
-
-<body>
-    
-
 </body>
 </html>
